# aipp

./: .gitignore  README.md  pyproject.toml
docs/: examples_guide.md  execution_and_grid.md  ml_and_rl.md  overview.md  research_guide.md  search_and_discovery.md  validation_and_risk.md
examples/: README.md  check_leakage.py  institutional_demo.ipynb  institutional_proof.py  performance_audit.py  scan_svb_peak.py  svb_audit.py  trader_decision_workflow.ipynb  trading_companion.py  verify_alpha.py  verify_alpha_short.py
examples/rl/: check_strategy.py  cross_regime_test.py  plot_results.py  rl_context_aware_training.py  rl_proof_of_concept.py  rl_sb3_training.py  rl_simple_training.py  rl_simple_training_v2.py  rl_stable_baselines.py  rl_training_example.py
pitch/: README.md  institutional_pitch.md
pitch/evidence/: audit_report_2024.md  evidence_data.json  generate_audit_data.py  (+2 more)
research/: 01_quant_onepager_plotly.ipynb  02_rl_episode_gating_research.ipynb  03_rl_anchor_sweep_generalization.ipynb  04_retrieval_only_policy_backtest.ipynb  05_similarity_calibration.ipynb  06_regime_conditioned_gating.ipynb  07_cost_slippage_stress_grid.ipynb  08_episode_feature_ablation.ipynb  09_cross_asset_transfer.ipynb  10_failure_case_gallery.ipynb  README.md
showcase/: 00_investor_onepager.py  01_search.py  02_backtest_and_audit.py  03_scan_watchlist.py  04_grid_trading_intel.py  05_backtesting_reality_check.py  06_rl_parallel_universes.py  07_rl_train_specialist_sb3.py  08_live_signals_feed.py  09_cross_asset_discovery.py  README.md  watchlist.txt
(+11 files in other folders)
